<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@color/colorJidelna2">

        <TextView
            android:id="@+id/obedyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_no_login"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_0150"
            android:textColor="@color/colorWhite"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingRight="5dp"
            android:paddingEnd="5dp"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/obedy_kredit"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/obedyKredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obedy_null"
            android:textStyle="bold"
            android:textColor="@color/colorJidelna3"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingRight="5dp"
            android:paddingEnd="5dp"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/string_0160x3"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/obedy_spotreba"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/obedySpotreba"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obedy_null"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingRight="5dp"
            android:paddingEnd="5dp"
            android:maxLines="1"/>

    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/obedyTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorJidelna"
        android:minHeight="?attr/actionBarSize"
        app:tabMaxWidth="0dp"
        app:tabGravity="fill"
        app:tabMode="fixed" />

    <cz.gvid.app.NonSwipeableViewPager
        android:id="@+id/obedyViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tabObedyLoading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/string_loading" />

</LinearLayout>