<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/row_suply"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:background="@color/colorMoodleGrey2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:text="@string/suplovani_latest"
            android:textColor="@color/colorMoodleGrey"
            android:textSize="15sp"
            android:textStyle="bold">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_suply_nofile"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:text="@string/suplovani_nofile"
            android:textColor="@color/colorPdfRed"
            android:textSize="15sp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_suply_old"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal"
        android:background="@color/colorMoodleGrey2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:text="@string/suplovani_old"
            android:textColor="@color/colorMoodleGrey"
            android:textSize="15sp"
            android:textStyle="bold">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_suply_file"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:cropToPadding="false"
                android:gravity="center"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_pdf" />

            <TextView
                android:id="@+id/label_suply_pdf_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="204565.pdf"
                android:textColor="@color/colorPdfRed"
                android:textSize="12sp">

            </TextView>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="#d5d5d5" />

        <TextView
            android:id="@+id/label_suply_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:text="Suplování"
            android:textColor="@color/colorMoodleBlue"
            android:textSize="15sp">

        </TextView>

    </LinearLayout>

</LinearLayout>